--- a/style.css
+++ b/style.css
@@ -3,13 +3,6 @@ body {
   background-color: #ffffff;
 }
 
-.file-upload {
-  background-color: #ffffff;
-  width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 .file-upload-btn {
   width: 100%;
   margin: 0;
@@ -42,17 +35,6 @@ body {
   text-align: center;
 }
 
-.file-upload-input {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  opacity: 0;
-  cursor: pointer;
-}
-
 .image-upload-wrap {
   object-fit: contain;
   border-radius: 10px;
@@ -60,14 +42,6 @@ body {
   margin-top: 20px;
   border: 2px dashed #1fb264;
   position: relative;
-}
-
-.upload {
-  width: 20%;
-}
-
-.upload-text {
-  font-size: 2rem;
 }
 
 .image-upload-wrap:hover {
@@ -187,11 +161,28 @@ body {
 }
 
 .file-upload {
-  padding: 5%;
-  border-radius: 10px;
+  width: 50%;
+  border-radius: 30px;
   border: solid 0.5px #f6f7fa;
   background-color: #ffbf00;
 }
+
+.file-upload-input {
+  margin: 20px;
+  position: absolute;
+  outline: none;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.upload {
+  width: 20%;
+}
+
+.upload-text {
+  font-size: 2rem;
+}
+
 /* On screens that are 600px or less, set the background color to olive */
 @media screen and (max-width: 600px) {
   html {
@@ -199,5 +190,8 @@ body {
   }
   .navbar-brand {
     font-size: 2rem;
+  }
+  .upload-text {
+    font-size: 1rem;
   }
 }
