--- a/style.css
+++ b/style.css
@@ -168,7 +168,8 @@ body {
 }
 
 .file-upload-input {
-  margin: 20px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   outline: none;
   opacity: 0;
@@ -176,7 +177,7 @@ body {
 }
 
 .upload {
-  width: 20%;
+  width: 40%;
 }
 
 .upload-text {
