--- a/style.css
+++ b/style.css
@@ -77,14 +77,12 @@ body {
 }
 
 .remove-image {
-  width: 200px;
+  border-radius: 20px;
+  padding: 1rem;
   margin: 0;
   color: #fff;
   background: #cd4535;
   border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #b02818;
   transition: all 0.2s ease;
   outline: none;
   text-transform: uppercase;
@@ -127,7 +125,7 @@ body {
 }
 
 .section {
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .title {
@@ -144,11 +142,63 @@ body {
   color: #97851d;
 }
 
+.version-text {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 50px;
+  line-height: 1.53;
+  color: #777777;
+}
+.result-message {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 10px;
+  line-height: 1.53;
+  color: #000000;
+}
+
+.loading-text {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 10px;
+  line-height: 1.53;
+  color: #000000;
+}
+
+.label-container {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 10px;
+  line-height: 1.53;
+  color: #000000;
+}
+
+#loading {
+  display: none;
+}
+
+.upload-text {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 1.53;
+  color: #000000;
+}
+
 .youtube-link {
   font-family: "MaplestoryOTFBold";
   text-decoration: underline;
   color: #b02818;
   font-size: 1.5rem;
+}
+
+.youtube-cover {
+  text-align: right;
+  padding-right: 8%;
 }
 
 .youtube-link:hover {
@@ -159,6 +209,11 @@ body {
 
 .youtube-icon {
   width: 8%;
+}
+
+/* gender */
+input#gender {
+  display: none;
 }
 
 .file-upload {
@@ -194,6 +249,6 @@ body {
     font-size: 2rem;
   }
   .upload-text {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
