모바일 반응형 개선 file-upload width 70vh

--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ input#gender {
 
 .file-upload {
   width: 55vh;
+  padding: 30px;
   border-radius: 30px;
   border: solid 0.5px #f6f7fa;
   background-color: #ffbf00;
