--- a/style.css
+++ b/style.css
@@ -217,8 +217,7 @@ input#gender {
 }
 
 .file-upload {
-  width: 55vh;
-  padding: 30px;
+  width: 25rem;
   border-radius: 30px;
   border: solid 0.5px #f6f7fa;
   background-color: #ffbf00;
