--- a/style.css
+++ b/style.css
@@ -152,11 +152,11 @@ body {
 }
 .result-message {
   font-family: "MaplestoryOTFBold";
-  font-size: 1rem;
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 10px;
   line-height: 1.53;
-  color: #000000;
+  color: #ff0000;
 }
 
 .loading-text {
