--- a/style.css
+++ b/style.css
@@ -147,10 +147,20 @@ body {
   font-family: "MaplestoryOTFBold";
   font-size: 1rem;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   line-height: 1.53;
-  color: #e6a75f;
+  color: #000000;
 }
+
+.admin-msg-text {
+  font-family: "MaplestoryOTFBold";
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 60px;
+  line-height: 1.53;
+  color: #000000;
+}
+
 .result-message {
   font-family: "MaplestoryOTFBold";
   font-size: 1rem;
